--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
    <h1>Press "New Game" to start</h1>
 
    <div class="choices">
-      <div class="choice"><img id="rock" src="/images/rock.png">
+      <div class="choice"><img id="rock" src="images/rock.png">
          <p>Rock</p>
       </div>
-      <div class="choice"><img id="paper" src="/images/paper.png">
+      <div class="choice"><img id="paper" src="images/paper.png">
          <p>Paper</p>
       </div>
-      <div class="choice"><img id="scissors" src="/images/scissors.png">
+      <div class="choice"><img id="scissors" src="images/scissors.png">
          <p>Scissors</p>
       </div>
    </div>
